--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ env_logger="*"
 futures = "0.1"
 tokio-core = "0.1"
 futures-cpupool = "0.1"
+crossbeam = "0.2.10"
+num_cpus = "1.1.0"
+serde = "0.8"
+serde_derive = "0.8"
+serde_json = "0.8"  # just for the example, not required in general
+hyper = "0.9.12"
